# vers_benchmarks

./: .gitignore  .gitmodules  Cargo.toml
benches/: elias_fano.rs  elias_fano_adversarial.rs  elias_fano_predecessor.rs  rank_and_select.rs  rmq.rs  select_adversarial.rs  wavelet.rs
benches/common/: mod.rs
examples/: measure_heap.rs
plots/: rank.typ
src/: benchmark.rs  main.rs  measure.rs  runner.rs
src/benches/: mod.rs  rank.rs  select.rs
